refactor(jpa): 重构代码以提高模块化和性能
- 将 CodeEnumType 中的反射解析逻辑提取到新工具类 CodeEnumHelper
- 移除 CodeEnumType 中的缓存字段，委托给 CodeEnumHelper 处理
- 新增 EnvironmentHelper 类统一管理环境检测逻辑
- 移除 EncryptConverter 中重复的生产环境检测代码
- 在 GlobalConfigHolder 中新增 Spring 应用上下文支持
- 为 KeysetPaginationHelper 添加空值处理支持
- 重构 LambdaUtils 以支持序列化路径的降级备选方案
- 更新文档注释以反映 Hibernate 专有特性和非 Hibernate 环境的处理方式